--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,27 @@
 body {
-  height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(231, 235, 240);
 }
 
 #root {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-container {
-  max-width: 400px;
   width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root button {
+    font-size: 1.4rem;
 }
 
-.main-container {
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
+p.MuiTypography-root {
+    font-size: 1.5rem;
+}
+
+span.MuiTypography-root {
+    font-size: 2rem;
+}
+
+#root h6 {
+    font-size: 1.5rem;
 }
 
 .MuiCalendarPicker-root .MuiPickersDay-root {
