--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(/static/img/intro-bg.webp) no-repeat center center;
+    background: url(/bedlink/static/img/intro-bg.webp) no-repeat center center;
     background-size: cover
 }
 
@@ -110,7 +110,7 @@ body,h1,h2,h3,h4,h5,h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(/static/img/banner-bg.webp) no-repeat center center;
+    background: url(/bedlink/static/img/banner-bg.webp) no-repeat center center;
     background-size: cover
 }
 
