--- a/static/css/landing-page.css
+++ b/static/css/landing-page.css
@@ -175,3 +175,15 @@ p.copyright {
   .MuiFormHelperText-root.success {
     color: green;
   }
+
+@media (max-width: 600px) {
+  .MuiCard-root {
+    margin: 10px;
+  }
+  .MuiTypography-root {
+    font-size: 1rem;
+  }
+  .MuiTextField-root {
+    margin-bottom: 10px;
+  }
+}
