--- a/public/static/css/landing-page.css
+++ b/public/static/css/landing-page.css
@@ -187,3 +187,7 @@ p.copyright {
     margin-bottom: 10px;
   }
 }
+
+/* .Mui-selected {
+    background-color: rgb(171, 166, 171) !important;
+  } */
